src/test/test-models/good/double_functions.stan
functions {
  real f01(real x) { return x+x; }
  real f02(real x, int y) { return x+y; }
  real f03(real x, int y, real z) { return x+y+z; }
}

model {}




