src/test/test-models/bad/rng_loc4.stan
functions {
  real foo_lpmf(int x) {
    return exponential_rng(x);
  }
}
model {
}
